# XbitOps

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_pypi_package.sh  cpp_simulate.cc  gemv.cu  gemv.cuh  gemv_w4a16.cu  main.cc  setup.py  unpack_weight_2_4_6.cu  unpack_weight_2_to_7.cu  unpack_weight_k16.cu
src/: cpp_simulate.cc  dq_torch_ops.cc  gemv.cuh  main.cc
src/cu/: common.cuh  gemv_fp16.cu  gemv_w4a16_c32.cu  gemv_w4a16_nt.cu  gemv_w4a16_pt.cu  quant_cuda_kernel.cu  unpack_weight.cu  unpack_weight_2_to_7.cu
